fix alignment issues

--- a/etc.clientlibs/unity/core/media-query/media-2.css
+++ b/etc.clientlibs/unity/core/media-query/media-2.css
@@ -353,43 +353,33 @@
 @media (max-width: 400px) {
 
   .responsive-why-us .rwu-button {
-
     padding: 1rem 1.6rem;
   }
 
-  .responsive-why-us .rwu-subtitle {}
 }
 
 @media (max-width: 375px) {
-  .responsive-why-us .wrapper {
-    /* padding: 2.2rem 1rem; */
-  }
 
   .responsive-why-us .rwu-title {
-
     line-height: 1.18;
     margin-bottom: 1.2rem;
   }
 
   .responsive-why-us .rwu-subtitle {
-
     margin-bottom: 0.8rem;
   }
 
   .responsive-why-us .rwu-button {
-
     padding: 1.2rem 2rem;
     margin-top: 1.1rem;
   }
 
   .responsive-why-us .rwu-paragraph p {
-
     line-height: 1.44;
     margin-bottom: 1.2rem;
   }
 
   .responsive-why-us .rwu-ul li {
-
     margin-bottom: 0.8rem;
     padding-left: 1.7rem;
   }
@@ -576,7 +566,7 @@
 @media (max-width: 768px) {
   .responsive-strategy-quote .wrapper {
     /* flex-direction: column; */
-    padding: 3rem 0rem;
+    padding: 5rem 0rem;
     box-sizing: border-box;
   }
 
@@ -884,8 +874,6 @@
     margin-bottom: 1.1rem !important;
   }
 
-  .responsive-where-next .link-item a {}
-
   .responsive-where-next .h2_plus {
 
     margin-bottom: 1.2rem !important;
@@ -905,8 +893,7 @@
 /* clientlib-responsive.css */
 @media (max-width: 768px) {
   .responsive-footer-action {
-    padding: 1.5rem 6rem;
-    padding-top: 0;
+    padding: 5rem 6rem;
   }
 
   .responsive-footer-action .wrapper {
@@ -914,19 +901,12 @@
     flex-direction: row;
     align-items: flex-start !important;
     justify-content: flex-start !important;
-    /* padding: 2.2rem 1.2rem 2rem 1.2rem; */
-    /* width: 100vw; */
-    /* max-width: 100vw; */
     box-sizing: border-box;
-    /* gap: 2.6rem; */
-    /* background: var(--midnight-sky); */
   }
 
   /* Stack all content vertically, left-aligned, big font */
   .responsive-footer-action .column-header,
   .responsive-footer-action .column-content {
-    /* width: 100% !important; */
-    /* max-width: 100% !important; */
     padding: 0 !important;
     margin: 0 0 1.7rem 0 !important;
     border: none !important;
@@ -935,6 +915,11 @@
     display: block !important;
     text-align: left !important;
     z-index: 3;
+  }
+
+  .responsive-footer-action .column-content a {
+    display: block;
+    padding-left: 0 !important;
   }
 
   /* Headings - big and bold */
@@ -967,12 +952,6 @@
     justify-content: flex-start !important;
     margin: 1.2rem 0 0 0 !important;
     padding: 0 !important;
-  }
-
-  .responsive-footer-action .social-links img {
-    width: 2.4rem !important;
-    height: 2.4rem !important;
-    display: block !important;
   }
 
   /* Email and button - huge and bold */
@@ -1086,8 +1065,7 @@
   }
 
   .responsive-footer-action .button.button-text-link {
-
-    padding: 0.9rem 1.2rem !important;
+    padding: 0.9rem 0rem !important;
     margin-top: 0.8rem !important;
   }
 
@@ -1098,10 +1076,14 @@
   .responsive-footer-action figure {
     width: 100vw !important;
     bottom: 0;
-    transform: translateY(45%);
+    transform: translateY(15%);
     top: auto !important;
     border-radius: 0;
     z-index: 1;
+  }
+
+  .responsive-footer-action ul.social-links li {
+    width: 3rem !important;
   }
 }
 
@@ -1286,10 +1268,6 @@
     height: 1.8rem !important;
     display: inline-block !important;
   }
-
-  .responsive-business-section p {}
-
-  .responsive-business-section H3 {}
 
   .responsive-business-section .contact-email-label {
 
@@ -2574,12 +2552,6 @@
 }
 
 @media (max-width: 768px) {
-  .rsp-investment-impact .sub-title {}
-
-  .rsp-investment-impact h2 {}
-
-  .rsp-investment-impact .column-content p {}
-
   .rsp-investment-impact .colum.column-figure.w-f.g-p-l.g-p-r {
     padding-left: 0 !important;
     padding-right: 0 !important;
@@ -2669,7 +2641,7 @@
   .rsp-learn-options .wrapper {
     display: flex !important;
     flex-direction: column !important;
-    padding: 3rem !important;
+    padding: 5rem 3rem !important;
     box-sizing: border-box;
   }
 
@@ -2725,8 +2697,6 @@
   }
 
   .rsp-learn-options .link-item a {
-    color: #049199 !important;
-    text-decoration: underline !important;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -2937,7 +2907,6 @@
     height: 1.8rem;
   }
 
-  .rsp-where-next h4 {}
 }
 
 
@@ -4527,8 +4496,6 @@
 
   }
 
-  .responsive-philosophy-section .column-header .sub-title {}
-
   .responsive-philosophy-section .column-header p {
 
     line-height: 1.6;
@@ -4986,8 +4953,6 @@
     padding-bottom: 1rem;
   }
 
-  .submenu li {}
-
   .submenu-label {
     font-size: 4rem;
     font-weight: 500;
@@ -5103,7 +5068,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 1.5rem;
-    padding: 1rem;
+    padding: 5rem 1rem 1rem;
   }
 
   footer .column {
@@ -5111,7 +5076,7 @@
     flex: 0 0 48%;
     padding: 0 !important;
     border: none !important;
-    margin: 3rem 0;
+    margin: 0rem 0 2rem;
   }
 
   /* Force 2 items per row */
@@ -5163,7 +5128,7 @@
 @media (max-width: 768px) {
   .rsp-contact-advice .wrapper {
     flex-direction: column !important;
-    padding: 0rem 3rem;
+    padding: 5rem 6rem !important;
     width: 100% !important;
   }
 
@@ -5236,12 +5201,18 @@
   }
 
   /* common */
+
+  a.site-brand {
+    width: 26rem !important;
+    height: auto !important;
+  }
+
   a.site-brand img {
-    height: 8rem !important;
+    height: auto !important;
   }
 
   .hero-content {
-    padding-top: 15rem;
+    padding-top: 15rem !important;
     text-align: center;
   }
 
